[build-system]
requires = ["setuptools >= 61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "easy_api_autobuilder"
version = "0.2.0"
requires-python = ">= 3.11"
dependencies = [
  "pydantic>=2.0",
  "pydantic>=2.0",
  "sqlalchemy>=2.0.17",
]

[project.optional-dependencies]
dev = [
  "add-trailing-comma==3.0.1",
  "autoflake==2.2.0",
  "black==23.7.0",
  "isort==5.12.0",
  "mypy==1.5.0",
  "wemake-python-styleguide==0.18.0",
]
